test/netlist/error/redefining-primitive.bop
and(a, b) = c
where
  c = Xor(a, b);
end where;
